Updated zoo website 18thSep17

--- a/public/lucknow-zoo/ListAnimal.html
+++ b/public/lucknow-zoo/ListAnimal.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-<title>Animals : Official Website of Nawab Wajid Ali Shah Zafar Zoological Garden</title>
+<title>Animal : Official Website of Nawab Wajid Ali Shah Zafar Zoological Garden</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -80,7 +80,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<li><a href="#team" class="scroll hvr-bounce-to-bottom">Discover Animals</a></li>
 							<!-- <li><a href="#services" class="scroll hvr-bounce-to-bottom">Adopt an Animal</a></li> -->
 							<!-- <li><a href="#video" class="scroll hvr-bounce-to-bottom">Plan Your Visit</a></li> -->
-							<li><a href="#gallery" class="scroll hvr-bounce-to-bottom">Adopt an Animal</a></li>
+							<li><a href="#gallery" class="scroll hvr-bounce-to-bottom"><!-- Discover Animals -->Adopt an Animal</a></li>
 							<li><a href="#contact" class="scroll hvr-bounce-to-bottom">Plan Your Visit</a></li>
 						</ul>
 					</nav>
@@ -106,198 +106,39 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 <!-- //header -->
 
-<!-- 4NewBoxes -->
-	<div class="gallery">
-			<!-- <div class="w3_tittle second two"><h3 class="agile-tittle two gal">Adopt an Animal</h3> <div class="line-style second"><span class="second"></span></div></div> -->
-		<div class="Events" style=" margin-left: 10%; margin-right: 10%">
-		    <div class="w3-agile-top-info" style="margin: 20px;">	
-				<!-- Testing -->
-				<div class="col-md-4 gallery-grid" style="padding: 10px">
-					<div class="grid" style= "background-color: #f1f1f1; font-weight: lighter; box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); border: 1px solid grey">
-						<figure class="effect-roxy">
-							<a href="AnimalDetail.html">
-								<img src="images/a1.jpg" alt="" />	
-							</a>
-						</figure>
-						<figcaption>
-								<h3>Bengal Tiger</h3>
-						</figcaption>
-					</div>
+<!-- Animal List -->
+<div class="col-md-12">
+				<!-- <h3>Instagram</h3> -->
+				<div class="w3agile_footer_grid_left">
+					<a href="#" data-toggle="modal" data-target="#myModal"><img src="images/g1.jpg" alt=" " class="img-responsive" /></a>
 				</div>
-				<div class="col-md-4 gallery-grid" style="padding: 10px">
-					<div class="grid" style= "background-color: #f1f1f1; font-weight: lighter; box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); border: 1px solid grey">
-						<figure class="effect-roxy">
-							<a href="AnimalDetail.html">
-								<img src="images/a2.jpg" alt="" />	
-							</a>
-						</figure>
-						<figcaption>
-								<h3>Panther</h3>
-						</figcaption>
-					</div>
+				<div class="w3agile_footer_grid_left">
+						<a href="#" data-toggle="modal" data-target="#myModal"><img src="images/g2.jpg" alt=" " class="img-responsive" /></a>
 				</div>
-				<div class="col-md-4 gallery-grid" style="padding: 10px">
-					<div class="grid" style= "background-color: #f1f1f1; font-weight: lighter; box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); border: 1px solid grey">
-						<figure class="effect-roxy">
-							<a href="AnimalDetail.html">
-								<img src="images/a3.jpg" alt="" />	
-							</a>
-						</figure>
-						<figcaption>
-								<h3>Giraffe</h3>
-						</figcaption>
-					</div>
+				<div class="w3agile_footer_grid_left">
+						<a href="#" data-toggle="modal" data-target="#myModal"><img src="images/g3.jpg" alt=" " class="img-responsive" /></a>
 				</div>
-				<div class="col-md-4 gallery-grid" style="padding: 10px">
-					<div class="grid" style= "background-color: #f1f1f1; font-weight: lighter; box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); border: 1px solid grey">
-						<figure class="effect-roxy">
-							<a href="AnimalDetail.html">
-								<img src="images/a4.jpg" alt="" />	
-							</a>
-						</figure>
-						<figcaption>
-								<h3>Deer</h3>
-						</figcaption>
-					</div>
+				<div class="w3agile_footer_grid_left">
+						<a href="#" data-toggle="modal" data-target="#myModal"><img src="images/g4.jpg" alt=" " class="img-responsive" /></a>
 				</div>
-				<div class="col-md-4 gallery-grid" style="padding: 10px">
-					<div class="grid" style= "background-color: #f1f1f1; font-weight: lighter; box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); border: 1px solid grey">
-						<figure class="effect-roxy">
-							<a href="AnimalDetail.html">
-								<img src="images/a5.jpg" alt="" />	
-							</a>
-						</figure>
-						<figcaption>
-								<h3>Hippopotamus</h3>
-						</figcaption>
-					</div>
+				<div class="w3agile_footer_grid_left">
+						<a href="#" data-toggle="modal" data-target="#myModal"><img src="images/g5.jpg" alt=" " class="img-responsive" /></a>
 				</div>
-				<div class="col-md-4 gallery-grid" style="padding: 10px">
-					<div class="grid" style= "background-color: #f1f1f1; font-weight: lighter; box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); border: 1px solid grey">
-						<figure class="effect-roxy">
-							<a href="AnimalDetail.html">
-								<img src="images/a6.jpg" alt="" />	
-							</a>
-						</figure>
-						<figcaption>
-								<h3>Sloth bear</h3>
-						</figcaption>
-					</div>
+				<div class="w3agile_footer_grid_left">
+						<a href="#" data-toggle="modal" data-target="#myModal"><img src="images/g2.jpg" alt=" " class="img-responsive" /></a>
 				</div>
-				<div class="col-md-4 gallery-grid" style="padding: 10px">
-					<div class="grid" style= "background-color: #f1f1f1; font-weight: lighter; box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); border: 1px solid grey">
-						<figure class="effect-roxy">
-							<a href="AnimalDetail.html">
-								<img src="images/a7.jpg" alt="" />	
-							</a>
-						</figure>
-						<figcaption>
-								<h3>Peafowl</h3>
-						</figcaption>
-					</div>
+				<div class="w3agile_footer_grid_left">
+					<a href="single.html"><img src="images/g1.jpg" alt=" " class="img-responsive" /></a>
 				</div>
-				<div class="col-md-4 gallery-grid" style="padding: 10px">
-					<div class="grid" style= "background-color: #f1f1f1; font-weight: lighter; box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); border: 1px solid grey">
-						<figure class="effect-roxy">
-							<a href="AnimalDetail.html">
-								<img src="images/a8.jpg" alt="" />	
-							</a>
-						</figure>
-						<figcaption>
-								<h3>Elephant</h3>
-						</figcaption>
-					</div>
+				<div class="w3agile_footer_grid_left">
+						<a href="#" data-toggle="modal" data-target="#myModal"><img src="images/g2.jpg" alt=" " class="img-responsive" /></a>
 				</div>
-				<div class="col-md-4 gallery-grid" style="padding: 10px">
-					<div class="grid" style= "background-color: #f1f1f1; font-weight: lighter; box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); border: 1px solid grey">
-						<figure class="effect-roxy">
-							<a href="AnimalDetail.html">
-								<img src="images/a9.jpg" alt="" />	
-							</a>
-						</figure>
-						<figcaption>
-								<h3>Rhinoceros</h3>
-						</figcaption>
-					</div>
+				<div class="w3agile_footer_grid_left">
+						<a href="#" data-toggle="modal" data-target="#myModal"><img src="images/g3.jpg" alt=" " class="img-responsive" /></a>
 				</div>
-				<div class="col-md-4 gallery-grid" style="padding: 10px">
-					<div class="grid" style= "background-color: #f1f1f1; font-weight: lighter; box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); border: 1px solid grey">
-						<figure class="effect-roxy">
-							<a href="AnimalDetail.html">
-								<img src="images/a10.jpg" alt="" />	
-							</a>
-						</figure>
-						<figcaption>
-								<h3>Lion</h3>
-						</figcaption>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid" style="padding: 10px">
-					<div class="grid" style= "background-color: #f1f1f1; font-weight: lighter; box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); border: 1px solid grey">
-						<figure class="effect-roxy">
-							<a href="AnimalDetail.html">
-								<img src="images/a11.jpg" alt="" />	
-							</a>
-						</figure>
-						<figcaption>
-								<h3>White Tiger</h3>
-						</figcaption>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid" style="padding: 10px">
-					<div class="grid" style= "background-color: #f1f1f1; font-weight: lighter; box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); border: 1px solid grey">
-						<figure class="effect-roxy">
-							<a href="AnimalDetail.html">
-								<img src="images/a12.jpg" alt="" />	
-							</a>
-						</figure>
-						<figcaption>
-								<h3>Fox</h3>
-						</figcaption>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid" style="padding: 10px">
-					<div class="grid" style= "background-color: #f1f1f1; font-weight: lighter; box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); border: 1px solid grey">
-						<figure class="effect-roxy">
-							<a href="AnimalDetail.html">
-								<img src="images/a13.jpg" alt="" />	
-							</a>
-						</figure>
-						<figcaption>
-								<h3>Fishing Cat</h3>
-						</figcaption>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid" style="padding: 10px">
-					<div class="grid" style= "background-color: #f1f1f1; font-weight: lighter; box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); border: 1px solid grey">
-						<figure class="effect-roxy">
-							<a href="AnimalDetail.html">
-								<img src="images/a14.jpg" alt="" />	
-							</a>
-						</figure>
-						<figcaption>
-								<h3>Hyena</h3>
-						</figcaption>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid" style="padding: 10px">
-					<div class="grid" style= "background-color: #f1f1f1; font-weight: lighter; box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); border: 1px solid grey">
-						<figure class="effect-roxy">
-							<a href="AnimalDetail.html">
-								<img src="images/a15.jpg" alt="" />	
-							</a>
-						</figure>
-						<figcaption>
-								<h3>Zebra</h3>
-						</figcaption>
-					</div>
-				</div>
-				<!-- //Testing -->
-				<div class="clearfix"> </div>
-			</div>
-		</div>
-	</div>
-<!-- //4NewBoxes-->
+	<div class="clearfix"> </div>
+</div>
+
 
 <!-- footer -->
 	<div class="footer">
