--- a/public/lucknow-zoo/index.html
+++ b/public/lucknow-zoo/index.html
@@ -431,7 +431,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="agileinfo_copy_right_right w3l_header_right">
 					<div class="w3l-button" style="margin: 10px">
-						<a href="ListAnimal.html" class="hvr-underline-from-center">See All Animals</a>
+						<a href="#" class="hvr-underline-from-center">See All Animals</a>
 					</div>
 				</div>
 				<div class="clearfix"></div>
