Updated zoo website 18thSep17

--- a/public/lucknow-zoo/Highlights.html
+++ b/public/lucknow-zoo/Highlights.html
@@ -56,10 +56,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<ul class="nav navbar-nav">
 							<li><a href="index.html">Home</a></li>
 							<li class="active"><a href="Highlights.html">Zoo Highlights</a></li>
-							<li><a href="AnimalDetail.html">Discover Animals</a></li>
+							<li><a href="ListAnimal.html">Discover Animals</a></li>
 							<!-- <li><a href="#services" class="scroll hvr-bounce-to-bottom">Adopt an Animal</a></li> -->
 							<!-- <li><a href="#video" class="scroll hvr-bounce-to-bottom">Plan Your Visit</a></li> -->
-							<li><a href="#">Adopt an Animal</a></li>
+							<li><a href="AdoptAnimal.html">Adopt an Animal</a></li>
 							<li><a href="#">Plan Your Visit</a></li>
 						</ul>
 						</ul>
@@ -313,26 +313,31 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- footer -->
 	<div class="footer">
 		<div class="container">
+			<!-- <div class="col-md-4 w3agile_footer_grid">
+				<h3>About Us</h3>
+				<p>The zoo is being managed as a trust by the Zoo Advisory Committee, with Forest Secretary to the Govt. of UP as Chairman, Principal Chief Conservator of Forests, UP as Vice Chairman and Chief Wildlife Warden, UP as Administrator. </p>
+				<h2><a href="index.html">LUCKNOW ZOOLOGICAL GARDEN</a></h2>
+			</div> -->
 			<div class="col-md-4 w3agile_footer_grid">	
 				<!-- <h3>Links</h3> -->
 				<ul>
-				    <li><a class="scroll" href="#about">Copyright Policy</a></li>
-					<li><a class="scroll" href="#services">Terms & Conditions</a></li>
-					<li><a class="scroll" href="#video">Query</a></li>
-					<li><a class="scroll" href="#contact">Feedback</a></li>
-					<li><a class="scroll" href="#contact">Sitemap</a></li>
-					<li><a class="scroll" href="#contact">Admin Login</a></li>
+				    <li><a href="#">Copyright Policy</a></li>
+					<li><a href="TermsCondition.html">Terms & Conditions</a></li>
+					<!-- <li><a class="scroll" href="#video">Query</a></li> -->
+					<li><a href="#">Feedback</a></li>
+					<li><a href="#">Sitemap</a></li>
+					<!-- <li><a class="scroll" href="#contact">Admin Login</a></li> -->
 				</ul>
 			</div>
 			<div class="col-md-4 w3agile_footer_grid">	
 				<!-- <h3>Links</h3> -->
 				<ul>
-				    <li><a class="scroll" href="#about">Achievements</a></li>
-					<li><a class="scroll" href="#services">Donation Schemes</a></li>
-					<li><a class="scroll" href="#video">Veterinary Facilities</a></li>
-					<li><a class="scroll" href="#contact">Press Releases</a></li>
-					<li><a class="scroll" href="#contact">Notice Board</a></li>
-					<li><a class="scroll" href="#contact">Tender Notice</a></li>
+				    <li><a href="#">Achievements</a></li>
+					<li><a href="#">Donation Schemes</a></li>
+					<li><a href="VeterinaryCare.html">Veterinary Facilities</a></li>
+					<li><a href="#">Press Releases</a></li>
+					<li><a href="#">Notice Board</a></li>
+					<li><a href="#">Tender Notice</a></li>
 				</ul>
 			</div>
 			<!--map-->
@@ -343,6 +348,46 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 			</div>
 		<!--//map-->
+			<!-- <div class="col-md-4 w3agile_footer_grid">
+				<h3>Twitter Posts</h3>
+				<ul class="w3agile_footer_grid_list">
+					<li>Ut aut reiciendis voluptatibus maiores alias, ut aut reiciendis.
+						<span> <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i> </a> 02 days ago</span></li>
+					<li>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis 
+						voluptatibus.<span> <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i> </a> 03 days ago</span></li>
+				</ul>
+			</div> -->
+			<!-- <div class="col-md-3 w3agile_footer_grid">
+				<h3>Instagram</h3>
+				<div class="w3agile_footer_grid_left">
+					<a href="#" data-toggle="modal" data-target="#myModal"><img src="images/g1.jpg" alt=" " class="img-responsive" /></a>
+				</div>
+				<div class="w3agile_footer_grid_left">
+						<a href="#" data-toggle="modal" data-target="#myModal"><img src="images/g2.jpg" alt=" " class="img-responsive" /></a>
+				</div>
+				<div class="w3agile_footer_grid_left">
+						<a href="#" data-toggle="modal" data-target="#myModal"><img src="images/g3.jpg" alt=" " class="img-responsive" /></a>
+				</div>
+				<div class="w3agile_footer_grid_left">
+						<a href="#" data-toggle="modal" data-target="#myModal"><img src="images/g4.jpg" alt=" " class="img-responsive" /></a>
+				</div>
+				<div class="w3agile_footer_grid_left">
+						<a href="#" data-toggle="modal" data-target="#myModal"><img src="images/g5.jpg" alt=" " class="img-responsive" /></a>
+				</div>
+				<div class="w3agile_footer_grid_left">
+						<a href="#" data-toggle="modal" data-target="#myModal"><img src="images/g2.jpg" alt=" " class="img-responsive" /></a>
+				</div>
+				<div class="w3agile_footer_grid_left">
+					<a href="single.html"><img src="images/g1.jpg" alt=" " class="img-responsive" /></a>
+				</div>
+				<div class="w3agile_footer_grid_left">
+						<a href="#" data-toggle="modal" data-target="#myModal"><img src="images/g2.jpg" alt=" " class="img-responsive" /></a>
+				</div>
+				<div class="w3agile_footer_grid_left">
+						<a href="#" data-toggle="modal" data-target="#myModal"><img src="images/g3.jpg" alt=" " class="img-responsive" /></a>
+				</div>
+				<div class="clearfix"> </div>
+			</div> -->
 			<div class="clearfix"> </div>
 		</div>
 	</div>
