--- a/public/lucknow-zoo/index.html
+++ b/public/lucknow-zoo/index.html
@@ -77,10 +77,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<ul class="nav navbar-nav">
 							<li class="active"><a class="scroll" href="index.html">Home</a></li>
 							<li><a href="Highlights.html">Zoo Highlights</a></li>
-							<li><a href="#team" class="scroll hvr-bounce-to-bottom">Discover Animals</a></li>
+							<li><a href="ListAnimal.html">Discover Animals</a></li>
 							<!-- <li><a href="#services" class="scroll hvr-bounce-to-bottom">Adopt an Animal</a></li> -->
 							<!-- <li><a href="#video" class="scroll hvr-bounce-to-bottom">Plan Your Visit</a></li> -->
-							<li><a href="#gallery" class="scroll hvr-bounce-to-bottom"><!-- Discover Animals -->Adopt an Animal</a></li>
+							<li><a href="AdoptAnimal.html"><!-- Discover Animals -->Adopt an Animal</a></li>
 							<li><a href="#contact" class="scroll hvr-bounce-to-bottom">Plan Your Visit</a></li>
 						</ul>
 					</nav>
@@ -431,7 +431,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="agileinfo_copy_right_right w3l_header_right">
 					<div class="w3l-button" style="margin: 10px">
-						<a href="#" class="hvr-underline-from-center">See All Animals</a>
+						<a href="ListAnimal.html" class="hvr-underline-from-center">See All Animals</a>
 					</div>
 				</div>
 				<div class="clearfix"></div>
@@ -669,38 +669,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 <!-- //gallery -->
 
-<!-- <div class="contact-agile" id="contact">
-			<div class="container">
-			<div class="w3_tittle second"><h3 class="agile-tittle two" style="color: #643C05">Contact Us</h3> <div class="line-style second"><span class="second"></span></div></div>
-				<div class="contact-left">
-					<h4>Lucknow Zoological Garden</h4>
-					<p>1143 New Hampshire Ave NW,</p>
-					<p>DC 20037, USA</p>
-					<h4>Phone</h4>
-					<p>+(010) 221 918 811</p>
-
-				</div>
-				<div class="contact-middle">
-					<h4>Say Hello</h4>
-					<form action="#" method="post">
-					<div class="form-agileinfo">
-						<p>Name</p>
-						<input type="text" name="your name" placeholder="Your name" required="" />
-						<p>Email</p>
-						<input type="email" name="your email" placeholder="Your email" required="" />
-					</div>
-					<div class="form-agileits-w3layouts">
-					<p>Comments</p>
-						<textarea  name="your message" placeholder="Your message" required="" ></textarea>
-							<input type="submit"   value="Send message">
-					</div>
-					<div class="clearfix"></div>
-					</form>
-				</div>
-			</div>
-		</div>
- -->
-
 <!-- footer -->
 	<div class="footer">
 		<div class="container">
@@ -712,23 +680,23 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-4 w3agile_footer_grid">	
 				<!-- <h3>Links</h3> -->
 				<ul>
-				    <li><a class="scroll" href="#about">Copyright Policy</a></li>
-					<li><a class="scroll" href="#services">Terms & Conditions</a></li>
-					<li><a class="scroll" href="#video">Query</a></li>
-					<li><a class="scroll" href="#contact">Feedback</a></li>
-					<li><a class="scroll" href="#contact">Sitemap</a></li>
-					<li><a class="scroll" href="#contact">Admin Login</a></li>
+				    <li><a href="#">Copyright Policy</a></li>
+					<li><a href="TermsCondition.html">Terms & Conditions</a></li>
+					<!-- <li><a class="scroll" href="#video">Query</a></li> -->
+					<li><a href="#">Feedback</a></li>
+					<li><a href="#">Sitemap</a></li>
+					<!-- <li><a class="scroll" href="#contact">Admin Login</a></li> -->
 				</ul>
 			</div>
 			<div class="col-md-4 w3agile_footer_grid">	
 				<!-- <h3>Links</h3> -->
 				<ul>
-				    <li><a class="scroll" href="#about">Achievements</a></li>
-					<li><a class="scroll" href="#services">Donation Schemes</a></li>
-					<li><a class="scroll" href="#video">Veterinary Facilities</a></li>
-					<li><a class="scroll" href="#contact">Press Releases</a></li>
-					<li><a class="scroll" href="#contact">Notice Board</a></li>
-					<li><a class="scroll" href="#contact">Tender Notice</a></li>
+				    <li><a href="#">Achievements</a></li>
+					<li><a href="#">Donation Schemes</a></li>
+					<li><a href="VeterinaryCare.html">Veterinary Facilities</a></li>
+					<li><a href="#">Press Releases</a></li>
+					<li><a href="#">Notice Board</a></li>
+					<li><a href="#">Tender Notice</a></li>
 				</ul>
 			</div>
 			<!--map-->
