--- a/public/lucknow-zoo/TermsCondition.html
+++ b/public/lucknow-zoo/TermsCondition.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-<title>Animals : Official Website of Nawab Wajid Ali Shah Zafar Zoological Garden</title>
+<title>Terms & Condition</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -75,12 +75,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="collapse navbar-collapse nav-wil" id="bs-example-navbar-collapse-1">
 					<nav>
 						<ul class="nav navbar-nav">
-							<li><a class="scroll" href="index.html">Home</a></li>
+							<li class="active"><a class="scroll" href="index.html">Home</a></li>
 							<li><a href="Highlights.html">Zoo Highlights</a></li>
-							<li class="active"><a href="#">Discover Animals</a></li>
+							<li><a href="ListAnimal.html">Discover Animals</a></li>
 							<!-- <li><a href="#services" class="scroll hvr-bounce-to-bottom">Adopt an Animal</a></li> -->
 							<!-- <li><a href="#video" class="scroll hvr-bounce-to-bottom">Plan Your Visit</a></li> -->
-							<li><a href="AdoptAnimal.html">Adopt an Animal</a></li>
+							<li><a href="AdoptAnimal.html"><!-- Discover Animals -->Adopt an Animal</a></li>
 							<li><a href="#contact" class="scroll hvr-bounce-to-bottom">Plan Your Visit</a></li>
 						</ul>
 					</nav>
@@ -106,198 +106,32 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 <!-- //header -->
 
-<!-- 4NewBoxes -->
-	<div class="gallery">
-			<!-- <div class="w3_tittle second two"><h3 class="agile-tittle two gal">Adopt an Animal</h3> <div class="line-style second"><span class="second"></span></div></div> -->
-		<div class="Events" style=" margin-left: 10%; margin-right: 10%">
-		    <div class="w3-agile-top-info" style="margin: 20px;">	
-				<!-- Testing -->
-				<div class="col-md-4 gallery-grid" style="padding: 10px">
-					<div class="grid" style= "background-color: #f1f1f1; font-weight: lighter; box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); border: 1px solid grey">
-						<figure class="effect-roxy">
-							<a href="AnimalDetail.html">
-								<img src="images/a1.jpg" alt="" />	
-							</a>
-						</figure>
-						<figcaption>
-								<h3 style="padding: 10%">Bengal Tiger</h3>
-						</figcaption>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid" style="padding: 10px">
-					<div class="grid" style= "background-color: #f1f1f1; font-weight: lighter; box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); border: 1px solid grey">
-						<figure class="effect-roxy">
-							<a href="AnimalDetail.html">
-								<img src="images/a2.jpg" alt="" />	
-							</a>
-						</figure>
-						<figcaption>
-								<h3 style="padding: 10%">Panther</h3>
-						</figcaption>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid" style="padding: 10px">
-					<div class="grid" style= "background-color: #f1f1f1; font-weight: lighter; box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); border: 1px solid grey">
-						<figure class="effect-roxy">
-							<a href="AnimalDetail.html">
-								<img src="images/a3.jpg" alt="" />	
-							</a>
-						</figure>
-						<figcaption>
-								<h3 style="padding: 10%">Giraffe</h3>
-						</figcaption>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid" style="padding: 10px">
-					<div class="grid" style= "background-color: #f1f1f1; font-weight: lighter; box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); border: 1px solid grey">
-						<figure class="effect-roxy">
-							<a href="AnimalDetail.html">
-								<img src="images/a4.jpg" alt="" />	
-							</a>
-						</figure>
-						<figcaption>
-								<h3 style="padding: 10%">Deer</h3>
-						</figcaption>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid" style="padding: 10px">
-					<div class="grid" style= "background-color: #f1f1f1; font-weight: lighter; box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); border: 1px solid grey">
-						<figure class="effect-roxy">
-							<a href="AnimalDetail.html">
-								<img src="images/a5.jpg" alt="" />	
-							</a>
-						</figure>
-						<figcaption>
-								<h3 style="padding: 10%">Hippopotamus</h3>
-						</figcaption>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid" style="padding: 10px">
-					<div class="grid" style= "background-color: #f1f1f1; font-weight: lighter; box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); border: 1px solid grey">
-						<figure class="effect-roxy">
-							<a href="AnimalDetail.html">
-								<img src="images/a6.jpg" alt="" />	
-							</a>
-						</figure>
-						<figcaption>
-								<h3 style="padding: 10%">Sloth bear</h3>
-						</figcaption>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid" style="padding: 10px">
-					<div class="grid" style= "background-color: #f1f1f1; font-weight: lighter; box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); border: 1px solid grey">
-						<figure class="effect-roxy">
-							<a href="AnimalDetail.html">
-								<img src="images/a7.jpg" alt="" />	
-							</a>
-						</figure>
-						<figcaption>
-								<h3 style="padding: 10%">Peafowl</h3>
-						</figcaption>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid" style="padding: 10px">
-					<div class="grid" style= "background-color: #f1f1f1; font-weight: lighter; box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); border: 1px solid grey">
-						<figure class="effect-roxy">
-							<a href="AnimalDetail.html">
-								<img src="images/a8.jpg" alt="" />	
-							</a>
-						</figure>
-						<figcaption>
-								<h3 style="padding: 10%">Elephant</h3>
-						</figcaption>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid" style="padding: 10px">
-					<div class="grid" style= "background-color: #f1f1f1; font-weight: lighter; box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); border: 1px solid grey">
-						<figure class="effect-roxy">
-							<a href="AnimalDetail.html">
-								<img src="images/a9.jpg" alt="" />	
-							</a>
-						</figure>
-						<figcaption>
-								<h3 style="padding: 10%">Rhinoceros</h3>
-						</figcaption>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid" style="padding: 10px">
-					<div class="grid" style= "background-color: #f1f1f1; font-weight: lighter; box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); border: 1px solid grey">
-						<figure class="effect-roxy">
-							<a href="AnimalDetail.html">
-								<img src="images/a10.jpg" alt="" />	
-							</a>
-						</figure>
-						<figcaption>
-								<h3 style="padding: 10%">Lion</h3>
-						</figcaption>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid" style="padding: 10px">
-					<div class="grid" style= "background-color: #f1f1f1; font-weight: lighter; box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); border: 1px solid grey">
-						<figure class="effect-roxy">
-							<a href="AnimalDetail.html">
-								<img src="images/a11.jpg" alt="" />	
-							</a>
-						</figure>
-						<figcaption>
-								<h3 style="padding: 10%">White Tiger</h3>
-						</figcaption>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid" style="padding: 10px">
-					<div class="grid" style= "background-color: #f1f1f1; font-weight: lighter; box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); border: 1px solid grey">
-						<figure class="effect-roxy">
-							<a href="AnimalDetail.html">
-								<img src="images/a12.jpg" alt="" />	
-							</a>
-						</figure>
-						<figcaption>
-								<h3 style="padding: 10%">Fox</h3>
-						</figcaption>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid" style="padding: 10px">
-					<div class="grid" style= "background-color: #f1f1f1; font-weight: lighter; box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); border: 1px solid grey">
-						<figure class="effect-roxy">
-							<a href="AnimalDetail.html">
-								<img src="images/a13.jpg" alt="" />	
-							</a>
-						</figure>
-						<figcaption>
-								<h3 style="padding: 10%">Fishing Cat</h3>
-						</figcaption>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid" style="padding: 10px">
-					<div class="grid" style= "background-color: #f1f1f1; font-weight: lighter; box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); border: 1px solid grey">
-						<figure class="effect-roxy">
-							<a href="AnimalDetail.html">
-								<img src="images/a14.jpg" alt="" />	
-							</a>
-						</figure>
-						<figcaption>
-								<h3 style="padding: 10%">Hyena</h3>
-						</figcaption>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid" style="padding: 10px">
-					<div class="grid" style= "background-color: #f1f1f1; font-weight: lighter; box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); border: 1px solid grey">
-						<figure class="effect-roxy">
-							<a href="AnimalDetail.html">
-								<img src="images/a15.jpg" alt="" />	
-							</a>
-						</figure>
-						<figcaption>
-								<h3 style="padding: 10%">Zebra</h3>
-						</figcaption>
-					</div>
-				</div>
-				<!-- //Testing -->
-				<div class="clearfix"> </div>
-			</div>
+
+<!-- team -->
+	<div class="team" id="team">
+		<div class="col-md-8 team-grid-text-agile" style="border: 1px solid grey; margin:10%">
+		
+		    <div class="w3_tittle"><h3 class="agile-tittle">Terms & Conditions</h3> <div class="line-style"><span></span></div></div>
+			<p>The terms and conditions as specified under Delivery Policy, Privacy Policy and Cancellation Policy.<br><br></p>
+			<h4>Delivery Policy:</h4>
+			<p>As per the terms and conditions laid down by the Lucknow Zoo, every consumer who pays for the entry tickets online will be provided with a printable Acknowledgment e-Receipt after successful completion of payment.<br><br></p>
+			<h4>Privacy Policy:</h4>
+			<p>This policy explains how Lucknow Zoo treats your personal information, and protects your privacy when you use the services.</p>
+			<p>You agree and understand that you are responsible for maintain the confidentiality of passwords associated with any account you use to access the services. Security and Virus Protection: No data transmission over the Internet can be guaranteed as totally secure. While we strive to protect such information, we do not warrant and cannot ensure the security of any information which you transmit to us. Accordingly, such transmission is at your own risk. We will not be liable for any damages or loss arising out of or resulting from any unauthorized access to, alternation to or modification of information contained on this website.</p>
+			<p>We do not accept liability for any loss, disruption or damage to you computer system or your data caused by using this website or arising as a result of having the website.<br><br></p>
+			<h4>Refund Policy:</h4>
+			<p>In the event of refund of the amount to the consumer for any reason, the amount will be refunded to the consumer on the concerned credit/debit card through Internet Payment Gateway process only and no cash refunds will be made. </p>
+			<p>The transaction processing fee inclusive of service tax for payment Gateway Facility â€“ Credit/Debit Card shall be charged from Lucknow Zoo consumers and will not be refundable. Any claim of interest on refund amount will not be entertained.</p>
+			<p>Lucknow Zoo may change the terms and conditions and disclaimer set out above from time to time. By browsing this website, you are accepting that you are bound by the current terms and conditions and disclaimer and so you should check these every time you revisit the website. <br><br></p>
+			<h4>Cancellation Policy:</h4>
+			<p>Not applicable.</p>
+                <!-- <div class="w3l-button" style="margin: 10px">
+						<a href="#" class="hvr-underline-from-center">Check out animals in VR</a>
+				</div> -->
 		</div>
+		<div class="clearfix"> </div>
 	</div>
-<!-- //4NewBoxes-->
+	<!-- //team -->
 
 <!-- footer -->
 	<div class="footer">
