Website modifications on 20thSep17

--- a/public/lucknow-zoo/AdoptAnimal.html
+++ b/public/lucknow-zoo/AdoptAnimal.html
@@ -55,8 +55,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="clearfix"> </div>
 		</div>
 	</div> -->
-	<div class="header-bottom">
-		<div class="container">
+	<div class="header-bottom topcontainerbgreen">
+		<div class="container ">
 			<nav class="navbar navbar-default">
 				<!-- Brand and toggle get grouped for better mobile display -->
 				<div class="navbar-header">
@@ -75,13 +75,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="collapse navbar-collapse nav-wil" id="bs-example-navbar-collapse-1">
 					<nav>
 						<ul class="nav navbar-nav">
-							<li><a class="scroll" href="index.html">Home</a></li>
-							<li><a href="Highlights.html">Zoo Highlights</a></li>
-							<li><a href="ListAnimal.html">Discover Animals</a></li>
+							<li><a href="#">Online Ticketing</a></li>
+							<li><a href="#">Visitors's Info</a></li>
+							<li><a href="ListAnimal.html">Animals & Plants</a></li>
 							<!-- <li><a href="#services" class="scroll hvr-bounce-to-bottom">Adopt an Animal</a></li> -->
 							<!-- <li><a href="#video" class="scroll hvr-bounce-to-bottom">Plan Your Visit</a></li> -->
-							<li class="active"><a href="AdoptAnimal.html">Adopt an Animal</a></li>
-							<li><a href="#contact" class="scroll hvr-bounce-to-bottom">Plan Your Visit</a></li>
+							<li><a href="Highlights.html">Attractions</a></li>
+							<li><a href="#">Donation Schemes</a></li>
+							<li><a href="#">Notices</a></li>
 						</ul>
 					</nav>
 				</div>
