--- a/public/lucknow-zoo/Highlights.html
+++ b/public/lucknow-zoo/Highlights.html
@@ -33,7 +33,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	
 <body>
 <!-- header -->
-	<div class="header-bottom">
+	<div class="header-bottom topcontainerbrown">
 		<div class="container">
 			<nav class="navbar navbar-default">
 				<!-- Brand and toggle get grouped for better mobile display -->
@@ -52,16 +52,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse nav-wil" id="bs-example-navbar-collapse-1">
 					<nav>
-						<ul class="nav navbar-nav" style="margin-left: 0px;">
-							<ul class="nav navbar-nav">
-							<li><a href="index.html">Home</a></li>
-							<li class="active"><a href="Highlights.html">Zoo Highlights</a></li>
-							<li><a href="ListAnimal.html">Discover Animals</a></li>
+						<ul class="nav navbar-nav">
+							<li><a href="#">Online Ticketing</a></li>
+							<li><a href="#">Visitors's Info</a></li>
+							<li><a href="ListAnimal.html">Animals & Plants</a></li>
 							<!-- <li><a href="#services" class="scroll hvr-bounce-to-bottom">Adopt an Animal</a></li> -->
 							<!-- <li><a href="#video" class="scroll hvr-bounce-to-bottom">Plan Your Visit</a></li> -->
-							<li><a href="AdoptAnimal.html">Adopt an Animal</a></li>
-							<li><a href="#">Plan Your Visit</a></li>
-						</ul>
+							<li><a href="Highlights.html">Attractions</a></li>
+							<li><a href="#">Donation Schemes</a></li>
+							<li><a href="#">Notices</a></li>
 						</ul>
 					</nav>
 				</div>
