--- a/public/lucknow-zoo/index.html
+++ b/public/lucknow-zoo/index.html
@@ -409,8 +409,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		    <div class="w3-agile-top-info">	
 				<div class="col-md-10 gallery-grid">
 					<div class="grid">
-							<a class="example-image-link" href="images/map.png" data-lightbox="example-set" data-title="In lacinia pharetra ipsum vel dapibus. Ut vitae tristique nisi, mattis pellentesque elit. Proin mollis sed nisi ac sodales.">
-								<img src="images/map.png" alt="" />
+							<a class="example-image-link" href="images/MAP.png" data-lightbox="example-set" data-title="In lacinia pharetra ipsum vel dapibus. Ut vitae tristique nisi, mattis pellentesque elit. Proin mollis sed nisi ac sodales.">
+								<img src="images/MAP.png" alt="" />
 							</a>
 						
 					</div>
