Updated zoo website 25thSep17

--- a/public/lucknow-zoo/Highlights.html
+++ b/public/lucknow-zoo/Highlights.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-<title>Highlights: Official Website of Nawab Wajid Ali Shah Zafar Zoological Garden</title>
+<title>Highlights: Official Website of Nawab Wajid Ali Shah Zoological Garden</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -33,8 +33,31 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	
 <body>
 <!-- header -->
-	<div class="header-bottom topcontainerbrown">
+	<div class="header" id="home">
 		<div class="container">
+			<div class="w3l_header_left">
+				<ul>
+				    <li><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>Lucknow </li>
+					<li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> <a href="mailto:info@example.com">info@whitebutter.com</a></li>
+					<li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> (91) 000 000 000</li>
+				</ul>
+			</div>
+		
+
+			<div class="w3l_header_right">
+				<ul>
+					<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+					<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+					<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+					<li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>	
+
+				</ul>
+			</div>
+			<div class="clearfix"> </div>
+		</div>
+	</div>
+	<div class="header-bottom topcontainerblue ">
+		<div class="container ">
 			<nav class="navbar navbar-default">
 				<!-- Brand and toggle get grouped for better mobile display -->
 				<div class="navbar-header">
@@ -45,7 +68,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<span class="icon-bar"></span>
 				  </button>
 					<div class="logo">
-						<h1><a class="navbar-brand" href="index.html"><span>Lucknow </span>Zoological Garden <p><br>Nawab Wajid Ali Shah Zafar</p></a></h1>
+						<h1><a class="navbar-brand" href="index.html"><span>Lucknow </span>Zoological Garden <p><br>Nawab Wajid Ali Shah</p></a></h1>
 					</div>
 				</div>
 
@@ -53,14 +76,63 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="collapse navbar-collapse nav-wil" id="bs-example-navbar-collapse-1">
 					<nav>
 						<ul class="nav navbar-nav">
+
 							<li><a href="#">Online Ticketing</a></li>
-							<li><a href="#">Visitors's Info</a></li>
-							<li><a href="ListAnimal.html">Animals & Plants</a></li>
-							<!-- <li><a href="#services" class="scroll hvr-bounce-to-bottom">Adopt an Animal</a></li> -->
-							<!-- <li><a href="#video" class="scroll hvr-bounce-to-bottom">Plan Your Visit</a></li> -->
-							<li><a href="Highlights.html">Attractions</a></li>
+						                <li class="dropdown list-category">
+						                    <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+						                        Visitor's Information
+						                    </a>
+						                    <ul class="dropdown-menu mega-dropdown-menu">
+						                        <li><a href="#">Achievement</a></li>
+						                        <li><a href="Ticket-Rates-Timings.html">Ticket Rates & Timing</a></li>
+						                        <li><a href="Main-animals-at-Zoo.html">Main animals at Zoo</a></li>
+						                        <li><a href="#">How to reach</a></li>
+						                        <li><a href="Zoo-map.html">Zoo map</a></li>
+						                        <li><a href="History.html">History</a></li>
+						                        <li><a href="Do-&-Donts.html">Do's & Don't</a></li>
+						                        <li><a href="List-of-Directors.html">List of Directors</a></li>
+						                        <li><a href="Certification.html">Certification</a></li>
+						                    </ul>
+						                </li>
+						                <li class="dropdown list-category">
+						                    <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+						                        Animals & Plants
+						                    </a>
+						                    <ul class="dropdown-menu mega-dropdown-menu">
+						                        <li><a href="IndianExoticAnimals.html">Indian Exotic Animals</a></li>
+						                        <li><a href="IndianExoticBirds.html">Indian Exotic Birds</a></li>
+						                        <li><a href="Reptiles.html">Reptile</a></li>
+						                        <li><a href="Serpentarium.html">Serpentarium</a></li>
+						                        <li><a href="Aquarium.html">Aquarium</a></li>
+						                        <li><a href="NocturnalHouse.html">Nocturnal House</a></li>
+						                        <li><a href="Interpretation.html">Interpretation Center</a></li>
+						                        <li><a href="StateArtMuseum.html">State Art Museum</a></li>
+						                        <li><a href="FloralDiversity.html">Floral Diversity</a></li>
+						                    </ul>
+						                </li>
+						                <li class="dropdown list-category">
+						                    <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+						                        Attractions
+						                    </a>
+						                    <ul class="dropdown-menu mega-dropdown-menu">
+						                        <li><a href="Highlights.html">Facilities</a></li>
+						                        <li><a href="Highlights.html">Events</a></li>
+						                        <li><a href="Highlights.html">Other Activities</a></li>
+						                    </ul>
+						                </li>
+							<!-- <li><a href="">Attractions</a></li> -->
 							<li><a href="#">Donation Schemes</a></li>
-							<li><a href="#">Notices</a></li>
+										<li class="dropdown list-category">
+						                    <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+						                        Notices
+						                    </a>
+						                    <ul class="dropdown-menu mega-dropdown-menu">
+						                        <li><a href="Highlights.html">Tender</a></li>
+						                        <li><a href="Highlights.html">Notice</a></li>
+						                        <li><a href="Highlights.html">Circulars</a></li>
+						                    </ul>
+						                </li>
+							<!-- <li><a href="#">Notices</a></li> -->
 						</ul>
 					</nav>
 				</div>
